jena-shex/src/test/files/shexTest/negativeStructure/ExtendsWithOr2.shex
# An extended shape expr should be a Shape or ShapeAnd
<http://a.example/S1> {<a> .} OR {<b> .}
<http://a.example/S2> EXTENDS @<http://a.example/S1> {}

